# json-schema-combinators

./: CHANGELOG.md  LICENSE  README.md  json-schema-combinators.cabal
.github/workflows/: ci.yml
examples/: Basic.hs
src/Data/: JsonSchema.hs
src/Data/JsonSchema/: Combinators.hs  OrderedMap.hs  Schema.hs  Serialization.hs
src/Data/JsonSchema/Schema/: Internal.hs
test/: Spec.hs
test/Data/JsonSchema/: CombinatorsSpec.hs  IntegrationSpec.hs  OrderedMapSpec.hs  SchemaSpec.hs  SerializationSpec.hs
